# toolchat7

./: .env.template  .gitignore  README.md  TODO.md  __init__.py  pyproject.toml  setup.py  streamlit_app.py
docs/: Architecture.md  Bugs.md  TODO.md  together-models.sorted.json
src/: __init__.py  streamlit_app.py
src/services/: __init__.py  chat_history.py  chat_model.py  tool_manager.py
src/utils/: __init__.py  utils.py
tests/: __init__.py  test_chat_history.py  test_chat_model.py
