[project]
name = "toolchat7"
version = "0.1.0"
description = "Streamlit chatbot with tool calling, uses custom APIs."
keywords = ["chatbot", "streamlit", "together-ai", "langchain", "tool-calling"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-together>=0.3,<0.4",
    "langgraph",
    "pytest",
    "python-dotenv",
    "streamlit",
]
authors = [
  {name = "Chad Norwood", email = "chad@chadnorwood.com"},
]
maintainers = [
  {name = "Chad Norwood", email = "chad@chadnorwood.com"},
]

[project.urls]
Homepage = "https://toolchat7.streamlit.app"
Repository = "https://github.com/chadn/toolchat7.git"


