[project]
name = "toolchat7"
version = "0.1.0"
description = "Streamlit chatbot with tool calling, uses custom APIs."
keywords = ["chatbot", "streamlit", "together-ai", "langchain", "tool-calling"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-together>=0.3,<0.4",
    "langgraph",
    "pytest",
    "python-dotenv",
    "streamlit",
]
authors = [
  {name = "Chad Norwood", email = "chad@chadnorwood.com"},
]
maintainers = [
  {name = "Chad Norwood", email = "chad@chadnorwood.com"},
]

[project.urls]
Homepage = "https://toolchat7.streamlit.app"
Repository = "https://github.com/chadn/toolchat7.git"


# Below from:
# https://gist.github.com/GhostofGoes/75051c4aeb215bc3cf48c10f5454b399
#
# Development dependencies
# uv pip install -e .[dev]
# uv pip install -e .[lint,test,exe]
[project.optional-dependencies]
lint = [
    # ruff linter checks for issues and potential bugs
    "ruff",

    # automatic code formatting to follow a consistent style
    "black",
]

dev = [
    # Can use https://github.com/cle-b/httpdbg to run streamlit python app
    "httpdbg",
]

[tool.ruff]
line-length = 120
target-version = 'py312'

